--- a/src/templates/main.styl
+++ b/src/templates/main.styl
@@ -80,3 +80,27 @@ span
 input.error
 	// border 1px solid #f33
 	box-shadow inset 0px 0 1px 0 #f00
+
+$path='/assets/icons/'
+$icons={
+	chat:"comments-solid.svg"
+}
+.icon-button
+	height 40px
+	width 40px
+	background-color #e7e7e7
+	border 1px solid #ccc
+	background-position 50% 50%
+	background-repeat no-repeat
+	background-size 70%
+	box-shadow inset 0 1px 0 #f7f7f7
+	border-radius 2px
+	box-sizing border-box
+	margin-left 1px
+	&:hover
+		background-color lighten(#e7e7e7,4)
+		cursor pointer
+
+.icon-bg-image-chat
+	$a=$path + $icons.chat
+	background-image url($a)
